# micromycetes

./: Cargo.toml  LICENSE.md  README.md
.cargo/: config
bluepill/: Cargo.toml
esp/: Cargo.toml  memory.x  openocd.cfg  ram.x  rom.x  run_env.sh
esp/src/: main.rs
playtime/: Cargo.toml
playtime/src/bluepill/: main.rs
playtime/src/nucleo/: main.rs
smokie/: Cargo.toml
smokie/src/: default_config.rs  lib.rs
src/: main.rs  smoke.rs
