[package]
name = "bluepill"
version = "0.1.0"
edition = "2018"

[dependencies]
#logic depedencies
smokie = {path = "../smokie"}

# platform dependencies
stm32f1xx-hal = { version = "0.5.2", features = ["rt", "stm32f103" ] }
#stm32g0xx-hal = {version = "0.0.8", features = ["rt", "stm32g07x"]}
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.8", features = ["device"] }
panic-semihosting = "0.5.2"


#shimming in multiple targets in probably the dumb way
[[bin]]
name = "bluepill"
path = "src/main.rs"

#[[bin]]
#name = "nucleo"
#path = "src/nucleo/main.rs"