[package]
name = "smokie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.6"

[dev-dependencies]
#mockall = {version = "0.11.0", features = ["nightly"]}
mockall = "0.11.0"
mockall_derive = "0.11.0"